[gd_scene load_steps=10 format=3 uid="uid://dgor7xhdd0aay"]

[ext_resource type="Script" uid="uid://b7cvyixu1dawr" path="res://scenes/ui/end_screen.gd" id="1_0aaec"]
[ext_resource type="PackedScene" uid="uid://berykcpudlkdw" path="res://scenes/component/random_audio_stream_player_component.tscn" id="2_el873"]
[ext_resource type="PackedScene" uid="uid://can05764pxj5s" path="res://scenes/ui/sound_button.tscn" id="2_od4l7"]
[ext_resource type="AudioStream" uid="uid://cjq71aqv5kkfl" path="res://sounds/victory_sound.ogg" id="3_db8ln"]
[ext_resource type="AudioStream" uid="uid://cytyq82noobt1" path="res://sounds/defeat_sound.ogg" id="4_msjbt"]

[sub_resource type="Animation" id="Animation_gdj2x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_up2nq"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ss7h8"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fwwij"]
_data = {
&"RESET": SubResource("Animation_gdj2x"),
&"in": SubResource("Animation_up2nq"),
&"out": SubResource("Animation_ss7h8")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0aaec")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "in"
libraries = {
"": SubResource("AnimationLibrary_fwwij")
}

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.392157)

[node name="VictoryStreamPlayerComponent" parent="." instance=ExtResource("2_el873")]
stream = ExtResource("3_db8ln")
volume_db = -5.0

[node name="DefeatStreamPlayerComponent" parent="." instance=ExtResource("2_el873")]
stream = ExtResource("4_msjbt")
volume_db = -5.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 24
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 2
text = "Congratulations! You've proven yourself a true survivor. The desert town is safe thanks to your bravery and resourcefulness. Well done!"
vertical_alignment = 2
autowrap_mode = 3

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ContinueButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer" instance=ExtResource("2_od4l7")]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 24)
layout_mode = 2
text = "Continue"

[node name="MenuButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer" instance=ExtResource("2_od4l7")]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 24)
layout_mode = 2
text = "Menu"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer" instance=ExtResource("2_od4l7")]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 24)
layout_mode = 2
text = "Quit"
